--- a/style.css
+++ b/style.css
@@ -24,6 +24,14 @@
     background-size: cover;
 }
 
+body {
+    width: 100vh;
+    background-image: url('background.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-postion: center;
+}
+
 body::before {
     content: "";
     position: absolute;
