--- a/style.css
+++ b/style.css
@@ -25,7 +25,8 @@
 }
 
 body {
-    width: 100vh;
+    width: 100%;
+    height: 100vh;
     background-image: url('background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
